// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contained button renders default contained button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-raised"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <div
        class="Button-children"
      >
        Contained
      </div>
    </span>
  </button>
</div>
`;

exports[`contained button renders primary contained button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-containedPrimary Button-root MuiButton-contained Button-contained MuiButton-containedPrimary Button-containedPrimary MuiButton-raised MuiButton-raisedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <div
        class="Button-children"
      >
        Contained
      </div>
    </span>
  </button>
</div>
`;

exports[`contained button renders secondary contained button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-containedSecondary Button-root MuiButton-contained Button-contained MuiButton-containedSecondary Button-containedSecondary MuiButton-raised MuiButton-raisedSecondary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <div
        class="Button-children"
      >
        Contained
      </div>
    </span>
  </button>
</div>
`;

exports[`disabled button renders disabled version 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButtonBase-disabled MuiButton-root Button-root MuiButton-outlined Button-outlined MuiButton-disabled"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <div
        class="Button-children"
      >
        Click me!
      </div>
    </span>
  </button>
</div>
`;

exports[`flat button renders default flat button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined Button-outlined"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <div
        class="Button-children"
      >
        Flat
      </div>
    </span>
  </button>
</div>
`;

exports[`flat button renders primary flat button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-outlinedPrimary Button-root MuiButton-outlined Button-outlined MuiButton-outlinedPrimary Button-outlinedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <div
        class="Button-children"
      >
        Flat
      </div>
    </span>
  </button>
</div>
`;

exports[`flat button renders secondary flat button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-outlinedSecondary Button-root MuiButton-outlined Button-outlined MuiButton-outlinedSecondary Button-outlinedSecondary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <div
        class="Button-children"
      >
        Flat
      </div>
    </span>
  </button>
</div>
`;

exports[`outlined button renders default outlined button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined Button-outlined"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <div
        class="Button-children"
      >
        Outlined
      </div>
    </span>
  </button>
</div>
`;

exports[`outlined button renders primary outlined button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-outlinedPrimary Button-root MuiButton-outlined Button-outlined MuiButton-outlinedPrimary Button-outlinedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <div
        class="Button-children"
      >
        Outlined
      </div>
    </span>
  </button>
</div>
`;

exports[`outlined button renders secondary outlined button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-outlinedSecondary Button-root MuiButton-outlined Button-outlined MuiButton-outlinedSecondary Button-outlinedSecondary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <div
        class="Button-children"
      >
        Outlined
      </div>
    </span>
  </button>
</div>
`;
